fix: promote powershell as windows bundle launcher